[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sprites/PlayButton.png" type="Texture" id=1]
[ext_resource path="res://UI/Title.gd" type="Script" id=2]
[ext_resource path="res://UI/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Sprites/Square.png" type="Texture" id=4]
[ext_resource path="res://UI/Font1.tres" type="DynamicFont" id=5]
[ext_resource path="res://UI/Font2.tres" type="DynamicFont" id=6]
[ext_resource path="res://Sprites/Player.png" type="Texture" id=7]
[ext_resource path="res://UI/MainMenu.tres" type="Theme" id=8]
[ext_resource path="res://UI/NotificationError.gd" type="Script" id=9]

[sub_resource type="Animation" id=1]
resource_name = "Popup"
length = 0.3
tracks/0/type = "bezier"
tracks/0/path = NodePath("NotificationError:rect_scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0.1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("NotificationError:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("NotificationError:rect_scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("NotificationError:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 8 )
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.0862745, 0.164706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version" type="Label" parent="."]
anchor_left = 0.97
anchor_top = 1.0
anchor_right = 0.97
anchor_bottom = 1.0
margin_left = -478.0
margin_top = -88.0
custom_fonts/font = ExtResource( 6 )
text = "Ver Alpha 0.1.2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -275.0
margin_right = 400.0
margin_bottom = 275.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="RichTextLabel" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -131.0
margin_top = -37.0
margin_right = 124.0
margin_bottom = -123.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/default_color = Color( 0.596078, 0.596078, 0.596078, 1 )
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "[shake radius=5 freq=2][rainbow freq=0.8 sat=10 val=5]411 v 1[/rainbow]
"
text = "411 v 1
"
scroll_active = false
script = ExtResource( 2 )

[node name="Control" type="Control" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -187.5
margin_top = -129.5
margin_right = 187.5
margin_bottom = 129.5

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/Control"]
anchor_left = 0.5
anchor_top = 0.8
anchor_right = 0.5
anchor_bottom = 0.8
margin_left = -230.5
margin_top = -129.5
margin_right = 230.5
margin_bottom = 129.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Offline" type="Button" parent="Menu/Control/VBoxContainer"]
modulate = Color( 0, 0.976471, 1, 1 )
margin_right = 461.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 6 )
text = "Offline"
flat = true

[node name="Online" type="Button" parent="Menu/Control/VBoxContainer"]
modulate = Color( 0, 0.976471, 1, 1 )
margin_top = 88.0
margin_right = 461.0
margin_bottom = 146.0
custom_fonts/font = ExtResource( 6 )
text = "Online"
flat = true

[node name="Leaderboards" type="Button" parent="Menu/Control/VBoxContainer"]
modulate = Color( 0, 0.976471, 1, 1 )
margin_top = 176.0
margin_right = 461.0
margin_bottom = 234.0
custom_fonts/font = ExtResource( 6 )
text = "Leaderboards"
flat = true

[node name="Cores" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PointsLbl" type="Label" parent="Cores"]
margin_left = 76.0
margin_top = 64.0
margin_right = 524.0
margin_bottom = 114.0
text = "RankedPoints:
0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="Cores"]
margin_left = 74.0
margin_top = 319.0
margin_right = 230.0
margin_bottom = 369.0
text = "Nome"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Cores"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -359.5
margin_top = -296.0
margin_right = 359.5
margin_bottom = 296.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" type="Sprite" parent="Cores/Control"]
position = Vector2( 78.5, 529 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="Cores/Control"]
anchor_left = 0.5
anchor_top = 0.05
anchor_right = 0.5
anchor_bottom = 0.05
margin_left = -406.5
margin_top = -29.0
margin_right = 406.5
margin_bottom = 29.0
custom_fonts/font = ExtResource( 6 )
text = "Escolha a cor do jogador"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Cores/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -183.0
margin_top = -182.5
margin_right = 183.0
margin_bottom = 182.5
columns = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Brown" type="TouchScreenButton" parent="Cores/Control/GridContainer"]
normal = ExtResource( 4 )

[node name="Blue" type="TouchScreenButton" parent="Cores/Control/GridContainer"]
position = Vector2( 0, 130 )
normal = ExtResource( 4 )

[node name="White" type="TouchScreenButton" parent="Cores/Control/GridContainer"]
position = Vector2( 0, 260 )
normal = ExtResource( 4 )

[node name="Black" type="TouchScreenButton" parent="Cores/Control/GridContainer"]
position = Vector2( 130, 0 )
normal = ExtResource( 4 )

[node name="Yellow" type="TouchScreenButton" parent="Cores/Control/GridContainer"]
position = Vector2( 130, 130 )
normal = ExtResource( 4 )

[node name="Cyan" type="TouchScreenButton" parent="Cores/Control/GridContainer"]
position = Vector2( 130, 260 )
normal = ExtResource( 4 )

[node name="Green" type="TouchScreenButton" parent="Cores/Control/GridContainer"]
position = Vector2( 260, 0 )
normal = ExtResource( 4 )

[node name="Grass" type="TouchScreenButton" parent="Cores/Control/GridContainer"]
position = Vector2( 260, 130 )
normal = ExtResource( 4 )

[node name="Purple" type="TouchScreenButton" parent="Cores/Control/GridContainer"]
position = Vector2( 260, 260 )
normal = ExtResource( 4 )

[node name="PlayButton" type="TextureButton" parent="Cores/Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.5
margin_top = -108.0
margin_right = 799.5
margin_bottom = 692.0
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 1 )
expand = true

[node name="PlayLabel" type="Label" parent="Cores/Control/PlayButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -340.0
margin_top = -105.0
margin_right = -169.0
margin_bottom = -55.0002
rect_scale = Vector2( 4, 4 )
text = "Play!"
align = 1
valign = 1

[node name="Login" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Login"]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8

[node name="ColorRect" type="Panel" parent="Login/Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Emaillbl" type="Label" parent="Login/Control/ColorRect"]
anchor_top = 0.05
anchor_bottom = 0.05
margin_left = 15.0
margin_top = 14.0
margin_right = 106.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 6 )
text = "Email"

[node name="Emailtxt" type="LineEdit" parent="Login/Control/ColorRect"]
anchor_left = 0.3
anchor_top = 0.03
anchor_right = 0.95
anchor_bottom = 0.17
rect_min_size = Vector2( 500, 0 )
custom_fonts/font = ExtResource( 6 )

[node name="Passlbl" type="Label" parent="Login/Control/ColorRect"]
anchor_top = 0.09
anchor_bottom = 0.1
margin_left = 13.5
margin_top = 85.5
margin_right = 174.5
margin_bottom = 143.5
custom_fonts/font = ExtResource( 6 )
text = "Password"

[node name="Passtxt" type="LineEdit" parent="Login/Control/ColorRect"]
anchor_left = 0.3
anchor_top = 0.2
anchor_right = 0.95
anchor_bottom = 0.34
rect_min_size = Vector2( 500, 0 )
custom_fonts/font = ExtResource( 6 )

[node name="Errortxt" type="Label" parent="Login/Control/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 6 )
align = 1
valign = 1

[node name="Login" type="Button" parent="Login/Control"]
anchor_left = 0.27
anchor_top = 0.37
anchor_right = 0.3
anchor_bottom = 0.4
margin_left = 618.5
margin_top = 285.5
margin_right = 718.5
margin_bottom = 349.5
custom_fonts/font = ExtResource( 6 )
text = "Login"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Register" type="Button" parent="Login/Control"]
anchor_left = 0.02
anchor_top = 0.37
anchor_right = 0.2
anchor_bottom = 0.4
margin_left = 5.5
margin_top = 285.5
margin_right = 157.5
margin_bottom = 349.5
custom_fonts/font = ExtResource( 6 )
text = "Register"

[node name="Menu" type="Control" parent="Login"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Waiting" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="Waiting"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -684.0
margin_top = -361.5
margin_right = 684.0
margin_bottom = 361.5

[node name="Wait" type="Control" parent="Waiting/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Waiting/Panel/Wait"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -328.5
margin_top = -25.0
margin_right = 328.5
margin_bottom = 25.0
text = "Waiting for match..."
align = 1
valign = 1

[node name="ReturnButton" type="Button" parent="Waiting/Panel/Wait"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 45.0
margin_top = -116.5
margin_right = 305.0
margin_bottom = -34.5
text = "Return"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="NotificationError" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -541.5
margin_top = -193.0
margin_right = 613.5
margin_bottom = 265.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 1155, 458 )
rect_pivot_offset = Vector2( 40, 40 )
popup_exclusive = true
window_title = ""
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Popup = SubResource( 1 )
anims/RESET = SubResource( 2 )

[connection signal="button_down" from="Menu/Control/VBoxContainer/Offline" to="." method="_on_Offline_button_down"]
[connection signal="pressed" from="Cores/Control/GridContainer/Brown" to="." method="_on_Brown_pressed"]
[connection signal="pressed" from="Cores/Control/GridContainer/Blue" to="." method="_on_Blue_pressed"]
[connection signal="pressed" from="Cores/Control/GridContainer/White" to="." method="_on_White_pressed"]
[connection signal="pressed" from="Cores/Control/GridContainer/Black" to="." method="_on_Black_pressed"]
[connection signal="pressed" from="Cores/Control/GridContainer/Yellow" to="." method="_on_Yellow_pressed"]
[connection signal="pressed" from="Cores/Control/GridContainer/Cyan" to="." method="_on_Cyan_pressed"]
[connection signal="pressed" from="Cores/Control/GridContainer/Green" to="." method="_on_Green_pressed"]
[connection signal="pressed" from="Cores/Control/GridContainer/Grass" to="." method="_on_Grass_pressed"]
[connection signal="pressed" from="Cores/Control/GridContainer/Purple" to="." method="_on_Purple_pressed"]
[connection signal="pressed" from="Cores/Control/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Login/Control/Login" to="." method="_on_Login_pressed"]
[connection signal="pressed" from="Login/Control/Register" to="." method="_on_Register_pressed"]
[connection signal="pressed" from="Waiting/Panel/Wait/ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
